antlr4/ExprEngineParser.cpp

// Generated from ExprEngine.g4 by ANTLR 4.7.2


#include "ExprEngineVisitor.h"

#include "ExprEngineParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprEngineParser::ExprEngineParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprEngineParser::~ExprEngineParser() {
  delete _interpreter;
}

std::string ExprEngineParser::getGrammarFileName() const {
  return "ExprEngine.g4";
}

const std::vector<std::string>& ExprEngineParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprEngineParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AssignRuleContext ------------------------------------------------------------------

ExprEngineParser::AssignRuleContext::AssignRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprEngineParser::AssignRuleContext::getRuleIndex() const {
  return ExprEngineParser::RuleAssignRule;
}

void ExprEngineParser::AssignRuleContext::copyFrom(AssignRuleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignExpressionContext ------------------------------------------------------------------

ExprEngineParser::AssignOperatorContext* ExprEngineParser::AssignExpressionContext::assignOperator() {
  return getRuleContext<ExprEngineParser::AssignOperatorContext>(0);
}

ExprEngineParser::ParamContext* ExprEngineParser::AssignExpressionContext::param() {
  return getRuleContext<ExprEngineParser::ParamContext>(0);
}

ExprEngineParser::ExpressionContext* ExprEngineParser::AssignExpressionContext::expression() {
  return getRuleContext<ExprEngineParser::ExpressionContext>(0);
}

ExprEngineParser::AssignExpressionContext::AssignExpressionContext(AssignRuleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::AssignExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitAssignExpression(this);
  else
    return visitor->visitChildren(this);
}
ExprEngineParser::AssignRuleContext* ExprEngineParser::assignRule() {
  AssignRuleContext *_localctx = _tracker.createInstance<AssignRuleContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprEngineParser::RuleAssignRule);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<AssignRuleContext *>(_tracker.createInstance<ExprEngineParser::AssignExpressionContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(38);
    dynamic_cast<AssignExpressionContext *>(_localctx)->left = param();
    setState(39);
    assignOperator();
    setState(40);
    dynamic_cast<AssignExpressionContext *>(_localctx)->right = expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

ExprEngineParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprEngineParser::PredicateContext* ExprEngineParser::ExpressionContext::predicate() {
  return getRuleContext<ExprEngineParser::PredicateContext>(0);
}


size_t ExprEngineParser::ExpressionContext::getRuleIndex() const {
  return ExprEngineParser::RuleExpression;
}


antlrcpp::Any ExprEngineParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::ExpressionContext* ExprEngineParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprEngineParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    predicate(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredicateContext ------------------------------------------------------------------

ExprEngineParser::PredicateContext::PredicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprEngineParser::PredicateContext::getRuleIndex() const {
  return ExprEngineParser::RulePredicate;
}

void ExprEngineParser::PredicateContext::copyFrom(PredicateContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExprAtomPredicateContext ------------------------------------------------------------------

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::ExprAtomPredicateContext::expressionAtom() {
  return getRuleContext<ExprEngineParser::ExpressionAtomContext>(0);
}

ExprEngineParser::ExprAtomPredicateContext::ExprAtomPredicateContext(PredicateContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::ExprAtomPredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitExprAtomPredicate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComparisonPredicateContext ------------------------------------------------------------------

ExprEngineParser::ComparisonOperatorContext* ExprEngineParser::ComparisonPredicateContext::comparisonOperator() {
  return getRuleContext<ExprEngineParser::ComparisonOperatorContext>(0);
}

std::vector<ExprEngineParser::PredicateContext *> ExprEngineParser::ComparisonPredicateContext::predicate() {
  return getRuleContexts<ExprEngineParser::PredicateContext>();
}

ExprEngineParser::PredicateContext* ExprEngineParser::ComparisonPredicateContext::predicate(size_t i) {
  return getRuleContext<ExprEngineParser::PredicateContext>(i);
}

ExprEngineParser::ComparisonPredicateContext::ComparisonPredicateContext(PredicateContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::ComparisonPredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitComparisonPredicate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicalPredicateContext ------------------------------------------------------------------

ExprEngineParser::LogicalOperatorContext* ExprEngineParser::LogicalPredicateContext::logicalOperator() {
  return getRuleContext<ExprEngineParser::LogicalOperatorContext>(0);
}

std::vector<ExprEngineParser::PredicateContext *> ExprEngineParser::LogicalPredicateContext::predicate() {
  return getRuleContexts<ExprEngineParser::PredicateContext>();
}

ExprEngineParser::PredicateContext* ExprEngineParser::LogicalPredicateContext::predicate(size_t i) {
  return getRuleContext<ExprEngineParser::PredicateContext>(i);
}

ExprEngineParser::LogicalPredicateContext::LogicalPredicateContext(PredicateContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::LogicalPredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitLogicalPredicate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LikePredicateContext ------------------------------------------------------------------

std::vector<ExprEngineParser::ExpressionAtomContext *> ExprEngineParser::LikePredicateContext::expressionAtom() {
  return getRuleContexts<ExprEngineParser::ExpressionAtomContext>();
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::LikePredicateContext::expressionAtom(size_t i) {
  return getRuleContext<ExprEngineParser::ExpressionAtomContext>(i);
}

tree::TerminalNode* ExprEngineParser::LikePredicateContext::LIKE() {
  return getToken(ExprEngineParser::LIKE, 0);
}

tree::TerminalNode* ExprEngineParser::LikePredicateContext::NOT() {
  return getToken(ExprEngineParser::NOT, 0);
}

ExprEngineParser::LikePredicateContext::LikePredicateContext(PredicateContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::LikePredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitLikePredicate(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::PredicateContext* ExprEngineParser::predicate() {
   return predicate(0);
}

ExprEngineParser::PredicateContext* ExprEngineParser::predicate(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ExprEngineParser::PredicateContext *_localctx = _tracker.createInstance<PredicateContext>(_ctx, parentState);
  ExprEngineParser::PredicateContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, ExprEngineParser::RulePredicate, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(53);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LikePredicateContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(45);
      expressionAtom(0);
      setState(47);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ExprEngineParser::NOT) {
        setState(46);
        dynamic_cast<LikePredicateContext *>(_localctx)->notOperator = match(ExprEngineParser::NOT);
      }
      setState(49);
      match(ExprEngineParser::LIKE);
      setState(50);
      expressionAtom(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ExprAtomPredicateContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(52);
      expressionAtom(0);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(65);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(63);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<LogicalPredicateContext>(_tracker.createInstance<PredicateContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RulePredicate);
          setState(55);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(56);
          logicalOperator();
          setState(57);
          dynamic_cast<LogicalPredicateContext *>(_localctx)->right = predicate(5);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<ComparisonPredicateContext>(_tracker.createInstance<PredicateContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RulePredicate);
          setState(59);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(60);
          comparisonOperator();
          setState(61);
          dynamic_cast<ComparisonPredicateContext *>(_localctx)->right = predicate(4);
          break;
        }

        } 
      }
      setState(67);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ExpressionAtomContext ------------------------------------------------------------------

ExprEngineParser::ExpressionAtomContext::ExpressionAtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprEngineParser::ExpressionAtomContext::getRuleIndex() const {
  return ExprEngineParser::RuleExpressionAtom;
}

void ExprEngineParser::ExpressionAtomContext::copyFrom(ExpressionAtomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BracketExprAtomContext ------------------------------------------------------------------

tree::TerminalNode* ExprEngineParser::BracketExprAtomContext::LPAREN() {
  return getToken(ExprEngineParser::LPAREN, 0);
}

ExprEngineParser::ExpressionContext* ExprEngineParser::BracketExprAtomContext::expression() {
  return getRuleContext<ExprEngineParser::ExpressionContext>(0);
}

tree::TerminalNode* ExprEngineParser::BracketExprAtomContext::RPAREN() {
  return getToken(ExprEngineParser::RPAREN, 0);
}

ExprEngineParser::BracketExprAtomContext::BracketExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::BracketExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitBracketExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParamExprAtomContext ------------------------------------------------------------------

ExprEngineParser::ParamContext* ExprEngineParser::ParamExprAtomContext::param() {
  return getRuleContext<ExprEngineParser::ParamContext>(0);
}

ExprEngineParser::ParamExprAtomContext::ParamExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::ParamExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitParamExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MathMDExprAtomContext ------------------------------------------------------------------

ExprEngineParser::MathMdOperatorContext* ExprEngineParser::MathMDExprAtomContext::mathMdOperator() {
  return getRuleContext<ExprEngineParser::MathMdOperatorContext>(0);
}

std::vector<ExprEngineParser::ExpressionAtomContext *> ExprEngineParser::MathMDExprAtomContext::expressionAtom() {
  return getRuleContexts<ExprEngineParser::ExpressionAtomContext>();
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::MathMDExprAtomContext::expressionAtom(size_t i) {
  return getRuleContext<ExprEngineParser::ExpressionAtomContext>(i);
}

ExprEngineParser::MathMDExprAtomContext::MathMDExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::MathMDExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitMathMDExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncInvokeExprAtomContext ------------------------------------------------------------------

ExprEngineParser::FuncInvokeContext* ExprEngineParser::FuncInvokeExprAtomContext::funcInvoke() {
  return getRuleContext<ExprEngineParser::FuncInvokeContext>(0);
}

ExprEngineParser::FuncInvokeExprAtomContext::FuncInvokeExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::FuncInvokeExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitFuncInvokeExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstantExprAtomContext ------------------------------------------------------------------

ExprEngineParser::ConstantContext* ExprEngineParser::ConstantExprAtomContext::constant() {
  return getRuleContext<ExprEngineParser::ConstantContext>(0);
}

ExprEngineParser::ConstantExprAtomContext::ConstantExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::ConstantExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitConstantExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CaseWhenExprAtomContext ------------------------------------------------------------------

ExprEngineParser::CaseWhenContext* ExprEngineParser::CaseWhenExprAtomContext::caseWhen() {
  return getRuleContext<ExprEngineParser::CaseWhenContext>(0);
}

ExprEngineParser::CaseWhenExprAtomContext::CaseWhenExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::CaseWhenExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitCaseWhenExprAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MathPMExprAtomContext ------------------------------------------------------------------

ExprEngineParser::MathPmOperatorContext* ExprEngineParser::MathPMExprAtomContext::mathPmOperator() {
  return getRuleContext<ExprEngineParser::MathPmOperatorContext>(0);
}

std::vector<ExprEngineParser::ExpressionAtomContext *> ExprEngineParser::MathPMExprAtomContext::expressionAtom() {
  return getRuleContexts<ExprEngineParser::ExpressionAtomContext>();
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::MathPMExprAtomContext::expressionAtom(size_t i) {
  return getRuleContext<ExprEngineParser::ExpressionAtomContext>(i);
}

ExprEngineParser::MathPMExprAtomContext::MathPMExprAtomContext(ExpressionAtomContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprEngineParser::MathPMExprAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitMathPMExprAtom(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::expressionAtom() {
   return expressionAtom(0);
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::expressionAtom(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ExprEngineParser::ExpressionAtomContext *_localctx = _tracker.createInstance<ExpressionAtomContext>(_ctx, parentState);
  ExprEngineParser::ExpressionAtomContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, ExprEngineParser::RuleExpressionAtom, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ConstantExprAtomContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(69);
      constant();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ParamExprAtomContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(70);
      param();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<CaseWhenExprAtomContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(71);
      caseWhen();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<FuncInvokeExprAtomContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(72);
      funcInvoke();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<BracketExprAtomContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(73);
      match(ExprEngineParser::LPAREN);
      setState(74);
      expression();
      setState(75);
      match(ExprEngineParser::RPAREN);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(89);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(87);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MathMDExprAtomContext>(_tracker.createInstance<ExpressionAtomContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpressionAtom);
          setState(79);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(80);
          mathMdOperator();
          setState(81);
          dynamic_cast<MathMDExprAtomContext *>(_localctx)->right = expressionAtom(3);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<MathPMExprAtomContext>(_tracker.createInstance<ExpressionAtomContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpressionAtom);
          setState(83);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(84);
          mathPmOperator();
          setState(85);
          dynamic_cast<MathPMExprAtomContext *>(_localctx)->right = expressionAtom(2);
          break;
        }

        } 
      }
      setState(91);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FuncInvokeContext ------------------------------------------------------------------

ExprEngineParser::FuncInvokeContext::FuncInvokeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprEngineParser::FuncInvokeContext::LPAREN() {
  return getToken(ExprEngineParser::LPAREN, 0);
}

std::vector<ExprEngineParser::ExpressionAtomContext *> ExprEngineParser::FuncInvokeContext::expressionAtom() {
  return getRuleContexts<ExprEngineParser::ExpressionAtomContext>();
}

ExprEngineParser::ExpressionAtomContext* ExprEngineParser::FuncInvokeContext::expressionAtom(size_t i) {
  return getRuleContext<ExprEngineParser::ExpressionAtomContext>(i);
}

tree::TerminalNode* ExprEngineParser::FuncInvokeContext::RPAREN() {
  return getToken(ExprEngineParser::RPAREN, 0);
}

tree::TerminalNode* ExprEngineParser::FuncInvokeContext::IDENTIFIER() {
  return getToken(ExprEngineParser::IDENTIFIER, 0);
}

std::vector<tree::TerminalNode *> ExprEngineParser::FuncInvokeContext::COMMA() {
  return getTokens(ExprEngineParser::COMMA);
}

tree::TerminalNode* ExprEngineParser::FuncInvokeContext::COMMA(size_t i) {
  return getToken(ExprEngineParser::COMMA, i);
}


size_t ExprEngineParser::FuncInvokeContext::getRuleIndex() const {
  return ExprEngineParser::RuleFuncInvoke;
}


antlrcpp::Any ExprEngineParser::FuncInvokeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitFuncInvoke(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::FuncInvokeContext* ExprEngineParser::funcInvoke() {
  FuncInvokeContext *_localctx = _tracker.createInstance<FuncInvokeContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprEngineParser::RuleFuncInvoke);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    dynamic_cast<FuncInvokeContext *>(_localctx)->func_ = match(ExprEngineParser::IDENTIFIER);
    setState(93);
    match(ExprEngineParser::LPAREN);
    setState(94);
    expressionAtom(0);
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprEngineParser::COMMA) {
      setState(95);
      match(ExprEngineParser::COMMA);
      setState(96);
      expressionAtom(0);
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    match(ExprEngineParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalOperatorContext ------------------------------------------------------------------

ExprEngineParser::LogicalOperatorContext::LogicalOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprEngineParser::LogicalOperatorContext::AND() {
  return getToken(ExprEngineParser::AND, 0);
}

tree::TerminalNode* ExprEngineParser::LogicalOperatorContext::OR() {
  return getToken(ExprEngineParser::OR, 0);
}


size_t ExprEngineParser::LogicalOperatorContext::getRuleIndex() const {
  return ExprEngineParser::RuleLogicalOperator;
}


antlrcpp::Any ExprEngineParser::LogicalOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitLogicalOperator(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::LogicalOperatorContext* ExprEngineParser::logicalOperator() {
  LogicalOperatorContext *_localctx = _tracker.createInstance<LogicalOperatorContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprEngineParser::RuleLogicalOperator);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprEngineParser::AND: {
        enterOuterAlt(_localctx, 1);
        setState(104);
        match(ExprEngineParser::AND);
        break;
      }

      case ExprEngineParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(105);
        match(ExprEngineParser::T__0);
        setState(106);
        match(ExprEngineParser::T__0);
        break;
      }

      case ExprEngineParser::OR: {
        enterOuterAlt(_localctx, 3);
        setState(107);
        match(ExprEngineParser::OR);
        break;
      }

      case ExprEngineParser::T__1: {
        enterOuterAlt(_localctx, 4);
        setState(108);
        match(ExprEngineParser::T__1);
        setState(109);
        match(ExprEngineParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignOperatorContext ------------------------------------------------------------------

ExprEngineParser::AssignOperatorContext::AssignOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprEngineParser::AssignOperatorContext::ASSIGN() {
  return getToken(ExprEngineParser::ASSIGN, 0);
}


size_t ExprEngineParser::AssignOperatorContext::getRuleIndex() const {
  return ExprEngineParser::RuleAssignOperator;
}


antlrcpp::Any ExprEngineParser::AssignOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprEngineVisitor*>(visitor))
    return parserVisitor->visitAssignOperator(this);
  else
    return visitor->visitChildren(this);
}

ExprEngineParser::AssignOperatorContext* ExprEngineParser::assignOperator() {
  AssignOperatorContext *_localctx = _tracker.createInstance<AssignOperatorContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprEngineParser::RuleAssignOperator);
